--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,6 +11,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".payment.ReceiveMoneyActivity"></activity>
+        <activity android:name=".payment.SendMoneyActivity" />
+        <activity android:name=".payment.NFCPayActivity" />
+        <activity android:name=".payment.QRPayActivity" />
         <activity
             android:name=".MiddlewareActivity"
             android:theme="@android:style/Theme.NoDisplay">
@@ -21,7 +25,9 @@
             </intent-filter>
         </activity>
         <activity android:name=".authentication.login.LoginActivity" />
-        <activity android:name=".MainActivity" android:label="@string/app_name"></activity>
+        <activity
+            android:name=".MainActivity"
+            android:label="@string/app_name" />
     </application>
 
 </manifest>
