add notification service

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,8 +29,15 @@
             android:name=".MainActivity"
             android:label="@string/app_name" />
 
+        <service android:name="com.example.chrysus.FCMRegisterService">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
+
         <meta-data android:name="news_url" android:value="http://198.12.106.137:5000/news/"/>
         <meta-data android:name="account_url" android:value="http://198.12.106.137:5000/payment/"/>
     </application>
+
 
 </manifest>
